--- a/reviews/templates/reviews/add_review.html
+++ b/reviews/templates/reviews/add_review.html
@@ -20,20 +20,22 @@
                     <p class="text-muted text-red font-weight-bold">*Fill out the form below to submit a product review
                     </p>
                     <hr class="w-50">
-                    <form action="#" method="POST" id="review-form">
+                    <form action="{% url 'add_review' product.id %}" method="POST" id="review-form">
                         {% csrf_token %}
                         <div>
                             <fieldset class="rounded px-3 mb-2">
-                                <legend class="fieldset-label text-black text-center px-2 w-auto font-weight-bold">
+                                <legend class="fieldset-label text-black text-center px-2 w-auto font-weight-bold rounded">
                                     <u>Review Title</u></legend>
-                                {{ form.review_title | as_crispy_field }}
+                                {{ review_form.review_title }}
                             </fieldset>
                             <hr class="w-50">
                             <fieldset class="rounded px-3 mb-2">
-                                <legend class="fieldset-label px-2 w-auto text-black text-center font-weight-bold">
+                                <legend class="fieldset-label px-2 w-auto text-black text-center font-weight-bold rounded">
                                     <u>Product Review and Rating</u></legend>
-                                <div>{{ form.review_description | as_crispy_field }}</div>
-                                <div class="ml-5">
+                                <div class="mb-2">{{ review.product | crispy }}</div>
+
+                                <div>{{ review_form.review_description }}</div>
+                                <!--<div class="ml-5">
                                     <select name="review_rating" id="id_review_rating"
                                         class="form-control rounded w-50 mb-4 bg-white text-darkred border-black ml-4">
                                         <option value="0">0 - No Rating Given</option>
@@ -42,13 +44,18 @@
                                         <option value="3">3 - OK</option>
                                         <option value="4">4 - Good</option>
                                         <option value="5">5 - Excellent</option>
-                                    </select>
+                                    </select> -->
+                                    {{ review_form.review_rating }}
+                                    <div class="text-black rounded">
+                                        <p>User: {{ request.user.username }}</p>
+                                        <small>{{ request.date }}</small>
+                                    </div>
                                     <!--<div class="float-right">-->
                                     {% if user.is_authenticated %}
                                     <label for="id-save-review">
-                                        <a class="btn btn-red rounded border-black font-weight-bold mb-2"
-                                            href="{% url 'account_signup' %}">Save Review <i
-                                                class="fas fa-file-alt"></i></a>
+                                        <button class="btn btn-red rounded border-black font-weight-bold mb-2"
+                                            href="{% url 'add_review' product.id %}">Save Review <i
+                                                class="fas fa-file-alt"></i></button>
                                     </label>
                                     {% else %}
                                     <label for="id-save-review">
