Added add,edit and delete funtionality for blogs

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -45,5 +45,13 @@
                 <a href="{% url 'products' %}?category=20clubequipment" class="dropdown-item text-red font-weight-bold">Club Equipment</a>
             </div>
         </li>
+        <li class="nav-item dropdown list-unstyled">
+            <a href="#" class="bg-darkred font-weight-bold nav-link text-rose text-lg-uppercase mr-5" id="all-products-link" data-toggle="dropdown">
+                Extra Info
+            </a>
+            <div class="dropdown-menu border-0 bg-rose" aria-labelledby="all-products-link">
+                <a href="{% url 'view_blogs' %}" class="dropdown-item text-red font-weight-bold">Blogs</a>
+            </div>
+        </li>
     </ul>
 </div>
