--- a/templates/base.html
+++ b/templates/base.html
@@ -88,6 +88,7 @@
               {%if request.user.is_authenticated %}
               {% if request.user.is_superuser %}
               <a href="{% url 'add_product' %}" class="dropdown-item text-red font-weight-bold">Manage Products</a>
+              <a href="{% url 'add_blog' %}" class="dropdown-item text-red font-weight-bold">Manage Blogs</a>
               {% endif %}
               <a href="{% url 'profile' %}" class="dropdown-item text-red font-weight-bold">My Profile</a>
               <a href="{% url 'account_logout' %}" class="dropdown-item text-red font-weight-bold">Sign Out</a>
