Finished add and delete functionality on reviews

--- a/blog/templates/blog/view_blog.html
+++ b/blog/templates/blog/view_blog.html
@@ -12,7 +12,7 @@
 
 {% block content %}
 {% for blog in blogs %}
-<div class="row ml-2 mr-2 mb-3">
+<div class="row">
     <div class="col-sm-12 col-md-6 col-xl-4">
         <div class="font-weight-bold border-black rounded bg-darkred text-rose text-center">
             <div>
