--- a/reviews/templates/reviews/includes/product_review.html
+++ b/reviews/templates/reviews/includes/product_review.html
@@ -1,7 +1,7 @@
-{% for review in reviews %}
-{% if review %}
-<div class="row ml-2 mr-2 mb-3">
-    <div class="col-12 col-lg-3">
+<div class="row">
+    {% for review in reviews %}
+    {% if review %}
+    <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
         <!--Display reviews about chosen product-->
         <div class="font-weight-bold border-black rounded bg-darkred text-rose text-center">
             <div>
@@ -25,8 +25,8 @@
                     <p class="text-muted text-rose"> by: {{ review.user }} on {{ review.date }}</p>
                     {% if request.user.is_superuser %}
                     <small class="font-weight-bold bg-white text-darkred">
-                        <a class="text-black" href="{% url 'edit_review' product.id review.id %}">Edit</a> | 
-                        <a class="text-red" href="{% url 'delete_review' product.id review.id %}">Delete</a>
+                        <a class="text-black" href="{% url 'edit_review' review.id %}">Edit</a> | 
+                        <a class="text-red" href="{% url 'delete_review' review.id %}">Delete</a>
                     </small>
                     {% endif %}
                 </div>
