--- a/blog/templates/blog/view_blog.html
+++ b/blog/templates/blog/view_blog.html
@@ -11,54 +11,38 @@
 {% endblock %}
 
 {% block content %}
-{% for blog in blogs %}
-<div class="row">
-    <div class="col-sm-12 col-md-6 col-xl-4">
-        <div class="font-weight-bold border-black rounded bg-darkred text-rose text-center">
-            <div>
-                <div class="font-weight-bold border-black rounded bg-darkred text-rose text-center">
+<div class="row bg-red">
+    {% for blog in blogs %}
+    {% if blog %}
+    <div class="col-sm-10 offset-sm-1 col-md-8 offset-md-1 col-lg-6 offset-lg-0">
+        <div class="bg-rose mt-4">
+            <div class="font-weight-bold border-black rounded bg-darkred text-rose card h-150 text-center mb-3">
+                <div class="card-top mt-2">
+                    <h3 class="text-uppercase">{{ blog.blog_title }}</h3>
+                </div>
+                <hr class="w-100 bg-rose">
+                <div class="card-body bg-rose text-black">
+                    <p>{{ blog.blog_description }}</p>
+                    <hr class="w-75 bg-rose">
+                    <p class="text-uppercase text-red">Final Say:</p>
+                    <p>{{ blog.blog_verdict }}</p>
+                </div>
+                <hr class="w-100 bg-rose">
+                <div class="card-bottom mb-3">
+                    <p class="text-muted text-rose"> by: {{ request.user.username }} on {{ blog_date }}</p>
                     <div>
-                        <div class="card-top mt-2">
-                            <h3 class="text-uppercase">{{ blog.blog_title }}</h3>
-                        </div>
-                        <hr class="w-100 bg-rose">
-                        <div class="card-body bg-rose text-black">
-                            <p>{{ blog.blog_description }}</p>
-                            <hr class="w-75 bg-rose">
-                            <p class="text-uppercase text-red">Final Say:</p>
-                            <p>{{ blog.blog_verdict }}</p>
-                        </div>
-                        <hr class="w-100 bg-rose">
-                        <div class="card-bottom">
-                            <p class="text-muted text-rose"> by: {{ request.user.username }} on {{ blog_date }}</p>
-                            <div>
-                                {% if request.user.is_superuser %}
-                                <small class="font-weight-bold bg-white text-darkred">
-                                    <a class="text-black" href="{% url 'edit_blog' blog.id %}">Edit</a> |
-                                    <a class="text-red" href="{% url 'delete_blog' blog.id %}">Delete</a>
-                                </small>
-                                {% endif %}
-                            </div>
-                        </div>    
+                        {% if request.user.is_superuser %}
+                        <small class="font-weight-bold bg-white text-darkred">
+                            <a class="text-black" href="{% url 'edit_blog' blog.id %}">Edit</a> |
+                            <a class="text-red" href="{% url 'delete_blog' blog.id %}">Delete</a>
+                        </small>
+                        {% endif %}
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+    {% endif %}
+    {% endfor %}
 </div>
-{% if forloop.counter|divisibleby:1 %}
-<div class="col-12 d-sm-none mb-5">
-    <hr>
-</div>
-{% endif %}
-{% if forloop.counter|divisibleby:2 %}
-<div class="col-12 d-none d-sm-block d-md-block d-lg-block d-xl-none mb-5">
-    <hr>
-</div>
-{% endif %}
-{% if forloop.counter|divisibleby:3 %}
-<div class="col-12 d-none d-xl-block mb-5">
-    <hr>
-</div>
-{% endif %}
-{% endfor %}
 {% endblock %}
