--- a/reviews/templates/reviews/add_review.html
+++ b/reviews/templates/reviews/add_review.html
@@ -26,31 +26,20 @@
                             <fieldset class="rounded px-3 mb-2">
                                 <legend class="fieldset-label text-black text-center px-2 w-auto font-weight-bold rounded">
                                     <u>Review Title</u></legend>
-                                {{ review_form.review_title }}
+                                {{ review_form.review_title | as_crispy_field }}
                             </fieldset>
                             <hr class="w-50">
                             <fieldset class="rounded px-3 mb-2">
                                 <legend class="fieldset-label px-2 w-auto text-black text-center font-weight-bold rounded">
                                     <u>Product Review and Rating</u></legend>
-                                <div class="mb-2">{{ review.product | crispy }}</div>
 
-                                <div>{{ review_form.review_description }}</div>
-                                <!--<div class="ml-5">
-                                    <select name="review_rating" id="id_review_rating"
-                                        class="form-control rounded w-50 mb-4 bg-white text-darkred border-black ml-4">
-                                        <option value="0">0 - No Rating Given</option>
-                                        <option value="1">1 - Stay Away</option>
-                                        <option value="2">2 - Subpar</option>
-                                        <option value="3">3 - OK</option>
-                                        <option value="4">4 - Good</option>
-                                        <option value="5">5 - Excellent</option>
-                                    </select> -->
-                                    {{ review_form.review_rating }}
-                                    <div class="text-black rounded">
-                                        <p>User: {{ request.user.username }}</p>
-                                        <small>{{ request.date }}</small>
-                                    </div>
-                                    <!--<div class="float-right">-->
+                                <div>{{ review_form.review_description | as_crispy_field }}</div>
+                                <div class="rounded">{{ review_form.review_rating | as_crispy_field }}</div>
+                                <div class="text-black rounded">
+                                    <p>User: {{ request.user.username }}</p>
+                                    <small>{{ request.date }}</small>
+                                </div>
+                                <div>
                                     {% if user.is_authenticated %}
                                     <label for="id-save-review">
                                         <button class="btn btn-red rounded border-black font-weight-bold mb-2"
@@ -64,7 +53,6 @@
                                         review.
                                     </label>
                                     {% endif %}
-                                    <!--</div>-->
                                 </div>
                             </fieldset>
                         </div>
